--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "app-loading": "0.0.51",
     "expo": "~40.0.0",
+    "expo-app-loading": "^1.0.1",
     "expo-cli": "^4.0.17",
     "expo-status-bar": "~1.0.3",
     "react": "16.13.1",
